atualizando as imagens do projeto

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                 <h2 class="event__details__title">Ui/Ux</h2>
                 <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, dolorum ratione distinctio autem est consequuntur reprehenderit laborum ducimus eos natus in voluptas ullam voluptatem quam a non iure eligendi. Itaque.</p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/ui-ux.png" alt="UI/UX">
         </div>
     </section>
     <section class="event event--data-science">
@@ -49,7 +49,7 @@
                 <h2 class="event__details__title">Data Science</h2>
                 <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, dolorum ratione distinctio autem est consequuntur reprehenderit laborum ducimus eos natus in voluptas ullam voluptatem quam a non iure eligendi. Itaque.</p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/data.png" alt="Data Science">
         </div>
     </section>
     <section class="event event--backend event--image-left">
@@ -58,7 +58,7 @@
                 <h2 class="event__details__title">Back-end</h2>
                 <p class="event__details__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, dolorum ratione distinctio autem est consequuntur reprehenderit laborum ducimus eos natus in voluptas ullam voluptatem quam a non iure eligendi. Itaque.</p>
             </div>
-            <img class="event__image" src="./images/frontend.png" alt="Front-end">
+            <img class="event__image" src="./images/backend.png" alt="Back-end">
         </div>
     </section>
 
